# CarbonWorkstation

./: .gitignore  CarbonWorkstation.workspace  CarbonWorkstation.workspace.layout  README.md  new.txt
Carbon/: CMakeLists.txt  Carbon.cbp  Carbon.layout  LICENSE  grub.img  install.sh  uninstall.sh
Carbon/Bootloader/: Bootloader.c
Carbon/Include/: Assert.h  Bootloader.h  CarbonDefine.h  CarbonKernelIO.h  CarbonStdColor.h  Descriptor.h  Gate.h  GlobalDescriptor.h  IrqManager.h  KernelAssembly.h  KeyMap.h  RTC.h  String.h  asm.h  interrupt.h  kProcess.h  stddef.h  stdio.h  stdlib.h  time.h
Carbon/Interrupt/: IntHandler.cpp  IntPreProcess.asm  InterruptController.c  InterruptDescriptor.c  InterruptService.c  IrqManager.cpp  KeyboardEventHandler.cpp
Carbon/Kernel/: Kernel.c
Carbon/Runtime/: Assert.c  String.c
Carbon/Script/: link.ld
Carbon/SegmentTable/: GlobalDescriptor.c
Carbon/Test/: memory_test.c  test.c  test.h
Carbon/Tool/: gdbinit  grub.img
Carbon/process/: kProcess.cpp
Carbon/src/: CMakeLists.txt  Carbon.img  Makefile  grub.img  kernel.elf
Carbon/src/Assert/: assert.c
Carbon/src/Bootloader/: boot.c
Carbon/src/CarbonRuntime/: asm.c  stdelf.c  stdio.c  stdio.cpp  string.c
Carbon/src/Include/: asm.h  assert.h  boot.h  descriptor.h  gate.h  init.h  intel8259a.h  interrupt.h  irq.h  key_map.h  kmemory.h  memory.h  memory_heap.h  process.h  stdarg.h  stddef.h  stdelf.h  stdio.h  stdio_color.h  stdlib.h  string.h  superblock.h  test.h  time.h  tss.h
Carbon/src/Interrupt/: intel8259a.c  interrupt.c  interruptmanager.c  irq.cpp  keyboard.cpp
Carbon/src/Kernel/: kernel.c  testbridge.c
Carbon/src/Memory/: bitmap.c  descriptormanager.c  kmemory.c  memory_heap.c  memorymanager.c  memorypool.c  page.c  pagemanager.c
Carbon/src/Test/: memory_test.c  test.c
Carbon/src/Tool/: bochsrc.bxrc  bochsrc.txt  gdbinit
Carbon/src/process/: process.cpp
Carbon/src/time/: APIC_timer.cpp  PIT_timer.cpp  RTC.cpp  RTC_timer.cpp  time.cpp
Carbon/test/: memory_test.c  test.c  test.h
Carbon/time/: APIC_timer.cpp  PIT_timer.cpp  RTC_timer.cpp
CarbonCC/: CarbonCC.cbp  CarbonCC.layout  README.md
CarbonCC/src/: calc.cpp  calc.h  main.cpp
CarbonLang/: CarbonLang.cbp  README.md
CarbonVM/: CarbonVM.cbp  README.md
Rebuild/Carbon/: CMakeLists.txt
Rebuild/Carbon/Bootloader/: BootLoader.c  CMakeLists.txt
Rebuild/Carbon/CarbonKernelRuntime/: Assert.c  CMakeLists.txt  CarbonELFDescriptor.c  KernelAssembly.c  String.c
Rebuild/Carbon/Include/: Assert.h  Math.h
Rebuild/Carbon/Interrupt/: CMakeLists.txt
Rebuild/Carbon/Kernel/: CMakeLists.txt
Rebuild/Carbon/Memory/: CMakeLists.txt  GlobalDescriptor.c
Rebuild/Carbon/Script/: link.ld
Restructure/BuildDirectory/: CMakeCache.txt  Makefile  cmake_install.cmake
Restructure/BuildDirectory/Bootloader/: Makefile  cmake_install.cmake
Restructure/BuildDirectory/Interrupt/: Makefile  cmake_install.cmake
Restructure/BuildDirectory/Kernel/: Makefile  cmake_install.cmake
Restructure/BuildDirectory/Runtime/: Makefile  cmake_install.cmake
Restructure/BuildDirectory/SegmentTable/: Makefile  cmake_install.cmake
Restructure/Carbon/: CMakeLists.txt
Restructure/Carbon/Bootloader/: CMakeLists.txt
Restructure/Carbon/CarbonRuntime/: CMakeLists.txt  CarbonKernelIO.c
Restructure/Carbon/Include/: Assert.h  Bootloader.h  CarbonDefine.h  CarbonELFDescriptor.h  CarbonKernelIO.h  Descriptor.h  Gate.h  GlobalDescriptor.h  InterruptService.h  KernelAssembly.h  String.h  Superblock.h  TSS.h
Restructure/Carbon/Interrupt/: CMakeLists.txt  InterruptController.c  InterruptDescriptor.c  InterruptService.c
Restructure/Carbon/Kernel/: CMakeLists.txt  Kernel.c
Restructure/Carbon/Memory/: CMakeLists.txt
Restructure/Carbon/Tool/: update_image
Restructure/Reformat/: CMakeLists.txt
Restructure/Reformat/Bootloader/: Bootloader.c  Bootloader.h  CMakeLists.txt
Restructure/Reformat/Include/: Assert.h  Bootloader.h  CarbonELFDescriptor.h  Descriptor.h  GlobalDescriptor.h  InterruptController.h  InterruptService.h
Restructure/Reformat/Interrupt/: CMakeLists.txt  Gate.h  InterruptController.c  InterruptDescriptor.c  InterruptService.c  InterruptService.h
Restructure/Reformat/Kernel/: CMakeLists.txt  Kernel.c
Restructure/Reformat/Runtime/: Assert.c  Assert.h  CMakeLists.txt  KernelAssembly.c  KernelAssembly.h  String.c  String.h
Restructure/Reformat/SegmentTable/: CMakeLists.txt  Descriptor.h  GlobalDescriptor.c  GlobalDescriptor.h
Restructure/Reformat/Tool/: update_image
cyOS/kernel/: types.h
grub_root/boot/grub/: grub.cfg
grub_root/boot/grub/i386-pc/: core.img  http.mod  modinfo.sh  multiboot.mod  multiboot2.mod  normal.mod
grub_root/boot/grub/locale/: en@quot.mo  en_AU.mo  en_CA.mo  en_GB.mo  zh_CN.mo
