cmake_minimum_required(VERSION 3.5)
project(Carbon)
set(CMAKE_C_COMPILER /usr/bin/gcc)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "-Wall -m32 -ggdb -gstabs+ -std=gnu11 -nostdinc -fpack-struct -fno-builtin -fno-stack-protector")
include_directories(Include)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Build)
message(STATUS "Source directory: ${CMAKE_SOURCE_DIR}")
message(STATUS "Compile directory: ${CMAKE_BINARY_DIR}")
file(GLOB SRC ./*/*.c)
add_executable(kernel.elf ${SRC})
set_target_properties(kernel.elf PROPERTIES LINK_FLAGS "-T ${PROJECT_SOURCE_DIR}/Script/link.ld -nostdlib")
