cmake_minimum_required(VERSION 3.10)
project(Carbon)
set(LINKER_FLAGS -T ${PROJECT_SOURCE_DIR}/Script/link.ld -m elf_i386 -nostdlib ${PROJECT_SOURCE_DIR}/Build/*.o)
include_directories(Include)
add_subdirectory(Bootloader)
add_subdirectory(Kernel)
add_subdirectory(CarbonKernelRuntime)
add_subdirectory(Memory)
add_subdirectory(Interrupt)
execute_process(COMMAND ld ${LINKER_FLAGS} -o ${PROJECT_SOURCE_DIR}/Build/kernel.elf)
execute_process(COMMAND ${PROJECT_SOURCE_DIR}/Tool/update_image)