cmake_minimum_required(VERSION 3.5)
project(Carbon)
set(LINKER_FLAGS -T ${PROJECT_SOURCE_DIR}/Script/link.ld -m elf_i386 -nostdlib ${PROJECT_SOURCE_DIR}/Build/*.o)
add_subdirectory(Bootloader)
add_subdirectory(Library)
add_subdirectory(Runtime)
add_subdirectory(SegmentTable)
add_subdirectory(Interrupt)
add_subdirectory(Kernel)
execute_process(COMMAND ld ${LINKER_FLAGS} -o Build/kernel.elf)
execute_process(COMMAND exec Tool/update_image)