cmake_minimum_required(VERSION 3.5)
set(CMAKE_C_COMPILER gcc)
add_compile_options(-c -Wall -m32 -ggdb -gstabs+ -std=gnu11 -nostdinc -fpack-struct -fno-builtin -fno-stack-protector)
include_directories(${PROJECT_SOURCE_DIR}/Include)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Build)
add_executable(GlobalDescriptor GlobalDescriptor.c)
set_target_properties(GlobalDescriptor PROPERTIES SUFFIX .o)
