cmake_minimum_required(VERSION 3.10)
set(CMAKE_C_COMPILER gcc)
add_compile_options(-c -Wall -m32 -ggdb -gstabs+ -std=gnu11 -nostdinc -fpack-struct -fno-builtin -fno-stack-protector)
include_directories("${PROJECT_SOURCE_DIR}/Include")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Build)
add_executable(CarbonKernelIO CarbonKernelIO.c ./)
add_executable(String String.c ./)
add_executable(KernelAssembly KernelAssembly.c ./)
add_executable(CarbonELFDescriptor CarbonELFDescriptor.c ./)
add_executable(Assert Assert.c ./)
set_target_properties(CarbonKernelIO PROPERTIES SUFFIX .o)
set_target_properties(String PROPERTIES SUFFIX .o)
set_target_properties(KernelAssembly PROPERTIES SUFFIX .o)
set_target_properties(CarbonELFDescriptor PROPERTIES SUFFIX .o)
set_target_properties(Assert PROPERTIES SUFFIX .o)