cmake_minimum_required(VERSION 3.10)
set(CMAKE_C_COMPILER gcc)
add_compile_options(-c -Wall -m32 -ggdb -gstabs+ -std=gnu11 -nostdinc -fpack-struct -fno-builtin -fno-stack-protector)
include_directories("${PROJECT_SOURCE_DIR}/Include")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Build)
add_executable(InterruptController InterruptController.c ../CarbonRuntime/)
add_executable(InterruptDescriptor InterruptDescriptor.c ../CarbonRuntime/)
add_executable(InterruptService InterruptService.c ../CarbonRuntime/)
set_target_properties(InterruptController PROPERTIES SUFFIX .o)
set_target_properties(InterruptDescriptor PROPERTIES SUFFIX .o)
set_target_properties(InterruptService PROPERTIES SUFFIX .o)