cmake_minimum_required(VERSION 3.5)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "-c -Wall -m32 -ggdb -gstabs+ -std=gnu11 -nostdinc -fpack-struct -fno-builtin -fno-stack-protector")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Build)
add_executable(InterruptController InterruptController.c ../Runtime/KernelAssembly.c Gate.h InterruptController.h ../Library/CarbonDefine.h)
add_executable(InterruptDescriptor InterruptDescriptor.c ../Runtime/KernelAssembly.c ../Library/CarbonKernelIO.c InterruptController.c)
add_executable(InterruptService InterruptService.c ../Runtime/KernelAssembly.c ../Library/CarbonKernelIO.c InterruptService.h Gate.h InterruptController.h)
set_target_properties(InterruptController PROPERTIES OBJECT .o)
set_target_properties(InterruptDescriptor PROPERTIES OBJECT .o)
set_target_properties(InterruptService PROPERTIES OBJECT .o)
