cmake_minimum_required(VERSION 3.10)
set(CMAKE_C_COMPILER gcc)
add_compile_options(-c -Wall -m32 -ggdb -gstabs+ -std=gnu11 -nostdinc -fpack-struct -fno-builtin -fno-stack-protector)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Build)
add_executable(Kernel Kernel.c ../Bootloader ../Interrupt ../Library ../Runtime ../SegmentTable)
set_target_properties(Kernel PROPERTIES OBJECT .o)